# ClawedCommand

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ASSET_PIPELINE.md  CAMPAIGN_GAPS.md  CLAUDE.md  Cargo.toml  GAME_DESIGN.md  MISTRAL.md  PLAN.md  README.md  STORYLINE.md  TDL.md  VOICE.md  claudepad.md  index.html  oldpad.md
.claude/commands/: imagegen.md
.github/workflows/: ci.yml  deploy-web.yml
assets/campaign/: act1_m1_pond_defense.ron  act1_m2_dead_drop.ron  act1_m3_counter_raid.ron  act1_m4_envoy.ron  act2_m5_false_front.ron  act2_m6_triangulation.ron  act2_m7_rexs_whisper.ron  act2_m8_oath_breaker.ron  act2_rat_kings_maze.ron  act3_m10_llama_perimeter.ron  act3_m11_junkyard.ron  act3_m12_rexs_truth.ron  act3_m13_escape_parliament.ron  act3_m9_jinx.ron  act4_m14_junkyard_fort.ron  act4_m15_iron_tide.ron  act4_m16_three_front_war.ron  act4_m17_long_retreat.ron  act5_m1_grotto_assembly.ron  act5_m2_convergence.ron  act5_m3_hero_confrontations.ron  act5_m4_threshold.ron  act5_m5_epilogue.ron  demo_canyon.ron  demo_match.ron  dream_lake.ron  dream_office.ron  dream_strait.ron  prologue.ron
assets/scripts/: aggressive_escort.lua  auto_economy.lua  auto_expand.lua  auto_produce.lua  basic_attack.lua  basic_build.lua  basic_gather.lua  basic_retreat.lua  basic_train.lua  cat_formation.lua  cat_siege_formation.lua  catgpt_abilities.lua  clawed_advanced.lua  clawed_formation.lua  croak_undying.lua  demo_combat.lua  llama_salvage.lua  murder_intelligence.lua  naive_no_abilities.lua  naive_nothing.lua  naive_remote_only.lua  naive_rush.lua  pond_defense_enemy_ai.lua  pond_defense_player_assist.lua  prologue_enemy_ai.lua  prologue_player_assist.lua  seekers_fortress.lua  strait_coverage.lua  strait_v2.lua  warren_swarm_ai.lua
assets/voice/: keyword_classifier.onnx  labels.txt
crates/cc_agent/: Cargo.toml
crates/cc_agent/src/: agent_bridge.rs  arena.rs  behaviors.rs  claude_cli.rs  construct_mode.rs  decision.rs  events.rs  fallback_client.rs  lib.rs  llm_client.rs  llm_runner.rs  lua_runtime.rs  mcp_tools.rs  runner.rs  script_context.rs  script_persistence.rs  script_registry.rs  snapshot.rs  spatial.rs  strait_bindings.rs  test_fixtures.rs  tool_tier.rs  wasm_persistence.rs  wasm_runner.rs  webllm_client.rs
crates/cc_agent/src/behaviors/: economy.rs  mod.rs  strategic.rs  tactical.rs
crates/cc_client/: Cargo.toml  index.html
crates/cc_client/examples/: poc_3d.rs  unit_viewer.rs
crates/cc_client/src/: cutscene.rs  dream.rs  dream_strait.rs  dream_test.rs  lib.rs  loading.rs  main.rs  setup.rs  showcase.rs  voice_demo.rs
crates/cc_client/src/input/: keyboard.rs  mod.rs  mouse.rs
crates/cc_client/src/renderer/: anim_assets.rs  animation.rs  autotile.rs  box_select.rs  building_anim_assets.rs  building_gen.rs  buildings.rs  camera.rs  death.rs  fog.rs  health_bars.rs  hero_sprites.rs  minimap.rs  mod.rs  projectile_assets.rs  projectiles.rs  props.rs  rally_flag.rs  resource_nodes.rs  screenshot.rs  selection.rs  terrain_atlas.rs  terrain_borders.rs  tile_gen.rs  tilemap.rs  tweens.rs  unit_gen.rs  units.rs  vfx.rs  voice_ping.rs  water.rs  zoom_lod.rs
crates/cc_client/src/ui/: ability_bar.rs  act_title_card.rs  agent_chat.rs  briefing.rs  build_menu.rs  building_info.rs  campaign_menu.rs  campaign_save.rs  cinematic.rs  command_card.rs  construct_mode.rs  debrief.rs  dialogue.rs  game_over.rs  hud.rs  mod.rs  notifications.rs  prompt_overlay.rs  provider_select.rs  resource_bar.rs  resource_hud.rs  unit_info.rs  world_map.rs
crates/cc_core/: Cargo.toml
crates/cc_core/src/: abilities.rs  building_stats.rs  commands.rs  components.rs  coords.rs  hero.rs  lib.rs  map.rs  map_format.rs  map_gen.rs  math.rs  mission.rs  mutator.rs  status_effects.rs  strait.rs  terrain.rs  tuning.rs  unit_stats.rs  upgrade_stats.rs
crates/cc_harness/: Cargo.toml
crates/cc_harness/src/: headless.rs  lib.rs  main.rs  server.rs  strait_headless.rs
crates/cc_sim/: Cargo.toml
crates/cc_sim/src/: lib.rs  pathfinding.rs  resources.rs  strait_sim.rs
crates/cc_sim/src/ai/: fsm.rs  mod.rs
crates/cc_sim/src/campaign/: mod.rs  mutator_state.rs  mutator_systems.rs  state.rs  triggers.rs  wave_spawner.rs
crates/cc_sim/src/harness/: invariants.rs  minimap.rs  mod.rs  report.rs  snapshot.rs
crates/cc_sim/src/systems/: ability_effect_system.rs  ability_system.rs  aura_system.rs  builder_system.rs  cleanup_system.rs  combat_system.rs  command_system.rs  damage.rs  grid_sync_system.rs  mod.rs  movement_system.rs  patrol_system.rs  production_system.rs  projectile_system.rs  research_system.rs  resource_system.rs  stat_modifier_system.rs  stationary_timer_system.rs  status_effect_system.rs  target_acquisition_system.rs  tick_system.rs  tower_combat_system.rs  victory_system.rs
crates/cc_sim/tests/: campaign_integration.rs  command_authorization.rs  counter_turtle.rs  integration.rs  multi_faction_abilities.rs  mutator_integration.rs  phase4b_abilities.rs  phase4c_abilities.rs  wet_test.rs
crates/cc_voice/: Cargo.toml
crates/cc_voice/src/: audio.rs  classifier.rs  events.rs  intent.rs  lib.rs  mel.rs  pipeline.rs  transcriber.rs  vad.rs
crates/cc_voice/tests/: voice_feature_enabled.rs  voice_intent.rs
docs/design/: strait_mission_v2.md
plans/: faction_clawed.md  faction_croak.md  faction_llama.md  faction_murder.md  faction_seekers.md
site/: caddy.conf  deploy.sh  index.html  play.html  prepare_assets.py
story/: act1_among_cats.md  act2_the_mountains_patience.md  act3_the_lie_that_sees.md  act4_garbage_and_glory.md  act5_still_waters.md  interlude_strait.md  prologue.md
tools/: gen_building_sheets.py  gen_demo_canyon.py  gen_dream_office_map.py  gen_dream_office_v2.py  gen_strait_map.py  stitch_sheet.py
tools/asset_pipeline/: gallery.html  generated_prompts.md  generated_prompts_portraits.md  make_review_sheets.py  requirements.txt  review.html
tools/map_editor/: gen_rat_kings_maze.py  index.html
training/: BREV_GUIDE.md  Modelfile  convert_peft_to_mlx.py  requirements.txt  test_finetuned.py  test_inference.py  test_results.json
training/agent/: game_mechanics.md  (+4 more)
(+1671 files in other folders)
