[workspace]
members = ["crates/cc_core", "crates/cc_sim", "crates/cc_client", "crates/cc_voice", "crates/cc_agent", "crates/cc_harness"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18", features = ["default", "jpeg"] }
serde = { version = "1", features = ["derive"] }
fixed = { version = "1", features = ["serde"] }
ron = "0.12"
noise = "0.9"
rand = "0.8"
ringbuf = "0.4"
crossbeam-channel = "0.5"
cpal = "0.15"
whisper-rs = "0.15"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
log = "0.4"


[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
