[package]
name = "cc_agent"
version = "0.1.0"
edition = "2024"

[features]
default = []
harness = ["cc_sim/harness", "dep:clap", "dep:image"]

[dependencies]
cc_core = { path = "../cc_core", features = ["bevy"] }
cc_sim = { path = "../cc_sim" }
bevy = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = "1"
async-trait = "0.1"
async-channel = "2"
log = { workspace = true }
thiserror = "2"
# Harness-only deps (optional)
clap = { version = "4", features = ["derive"], optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# Native-only deps (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.10", features = ["luau", "vendored", "serialize"] }
tokio = { version = "1", features = ["rt", "macros"] }
crossbeam-channel = { workspace = true }

# WASM-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[[bin]]
name = "arena"
path = "src/bin/arena.rs"
required-features = ["harness"]
