[package]
name = "cc_client"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["dep:cc_agent", "dep:cc_voice", "dep:bevy_egui"]

[dependencies]
cc_core = { path = "../cc_core", features = ["bevy"] }
cc_sim = { path = "../cc_sim" }
cc_voice = { path = "../cc_voice", default-features = false, optional = true }
cc_agent = { path = "../cc_agent", optional = true }
bevy = { workspace = true }
bevy_egui = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["webgl2"] }
getrandom = { version = "0.2", features = ["js"] }
