[package]
name = "cc_harness"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cc_harness"
path = "src/main.rs"

[dependencies]
cc_core = { path = "../cc_core", features = ["bevy"] }
cc_sim = { path = "../cc_sim" }
cc_agent = { path = "../cc_agent" }
bevy = { workspace = true }
rmcp = { version = "0.17", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = "1"
schemars = "1"
log = { workspace = true }
env_logger = "0.11"
