[package]
name = "cc_sim"
version = "0.1.0"
edition = "2024"

[features]
default = []
harness = ["dep:image", "dep:serde_json"]

[dependencies]
cc_core = { path = "../cc_core", features = ["bevy"] }
bevy = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

# Harness-only deps (optional)
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
