[package]
name = "cc_voice"
version = "0.1.0"
edition = "2024"

[features]
default = ["voice"]
voice = ["dep:whisper-rs", "dep:cpal", "dep:ringbuf", "dep:crossbeam-channel", "dep:ort"]

[dependencies]
cc_core = { path = "../cc_core", features = ["bevy"] }
cc_sim = { path = "../cc_sim" }
bevy = { workspace = true }

# Voice dependencies (optional — disabled for builds without voice hardware)
whisper-rs = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
ort = { workspace = true, optional = true }

log = { workspace = true }
